@@ -1,3 +1,10 @@
+2008-09-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidMethodWithUnusedGenericTypeRule.cs: Recursively check
+	GenericInstanceType and GenericParameter.
+	* UseGenericEventHandlerRule.cs: Handle System.MulticastDelegate 
+	special case (since there's no Invoke).
+
 2008-09-14  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidMethodWithUnusedGenericTypeRule.cs,
